--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/ndlevinzon" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.linkedin.com/in/nathan-levinzon/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
 										</li>
